--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "float-cmp"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["Mike Dilger <mike@mikedilger.com>"]
 description = "Floating point approximate comparison traits"
 repository = "https://github.com/mikedilger/float-cmp"
@@ -9,7 +9,7 @@ keywords = [ "float", "comparison", "fuzzy", "approximate" ]
 license = "MIT"
 
 [lib]
-name = "float-cmp"
+name = "float_cmp"
 path = "src/lib.rs"
 test = true
 doctest = true
