--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.4.0"
 authors = ["Mike Dilger <mike@mikedilger.com>"]
 description = "Floating point approximate comparison traits"
 repository = "https://github.com/mikedilger/float-cmp"
-documentation = "https://mikedilger.github.io/float-cmp"
+documentation = "https://docs.rs/float-cmp"
 readme = "README.md"
 keywords = [ "float", "comparison", "fuzzy", "approximate" ]
 license = "MIT"
