Make num-traits optional, since it slows compilation down by 13-fold (see #16)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,8 @@ test = true
 doctest = true
 doc = true
 
+[features]
+default = [ "num-traits" ]
+
 [dependencies]
-num-traits = { version = "0.2", default-features = false }
+num-traits = { version = "0.2", default-features = false, optional = true }
