add support for no_std
To enable support for no_std, the new std feature simply needs to be disabled.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ doctest = true
 doc = true
 
 [features]
-default = [ "num-traits" ]
+default = [ "num-traits", "std" ]
+std = []
 
 [dependencies]
 num-traits = { version = "0.2", default-features = false, optional = true }
