--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ doctest = true
 doc = true
 
 [features]
-default = [ "num-traits" ]
+default = [ "ratio" ]
+ratio = [ "num-traits" ]
+std = [ ]
 
 [dependencies]
 num-traits = { version = "0.2", default-features = false, optional = true }
