--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "float-cmp"
-version = "0.8.0-pre"
+version = "0.8.0"
 authors = ["Mike Dilger <mike@mikedilger.com>"]
 description = "Floating point approximate comparison traits"
 repository = "https://github.com/mikedilger/float-cmp"
